Completed register and login flow

--- a/dashboard.html
+++ b/dashboard.html
@@ -41,9 +41,9 @@
 </head>
 <body>
 <div class="container dashboard" ng-controller='DashboardController' ng-init='getEventList()'>
-    <a href="login.html">
+    <!-- <a href="login.html">
         <button class="btn btn-default" style="float:right;">LOG OUT</button>
-    </a>
+    </a> -->
     <br>
     <h1 class="heading padding" style="color: black;">SYNAPSE 2017</h1>
     <hr class="under_head">
@@ -743,6 +743,7 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-cookies.min.js" charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angularFire/2.3.0/angularfire.min.js" charset="utf-8"></script>
 <script src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
 <script>
