Filtered registered events

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app='synapse'>
+<html lang="en" ng-app='synapse' ng-cloak>
 <head>
     <meta charset="UTF-8">
     <title>Synapse 2017</title>
