Fixed events length bug

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Synapse 2017</title>
     <base href="/">
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -105,7 +106,7 @@
           </div>
         </div>
     </div>
-    <h2 class="heading padding">EVENT LIST</h2><br>
+    <h2 class="heading padding">EVENTS LIST</h2><br>
     <div class="row">
         <div class="col-md-3" ng-repeat='event in events'>
             <div class="event_card">
