Fixed modal close bug

--- a/dashboard.html
+++ b/dashboard.html
@@ -218,7 +218,7 @@
                         <label>Literature Quiz - </label> <input type="checkbox" value="Literature_Quiz"><br><br>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E001', 'Shailee')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -251,7 +251,7 @@
                         <label>Goofspoof - </label> <input type="checkbox" value="Goofspoof"><br><br>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E010', 'Masquerade')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -294,7 +294,7 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E012', 'CS-1.6')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -337,7 +337,7 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E013', 'Dota-2')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -376,7 +376,7 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E014', 'NFS-MW')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -407,7 +407,7 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E015', 'Age-Of-Empires')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -442,7 +442,7 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E016', 'Mini-Militia')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -475,7 +475,7 @@
                         <label>Instrumental - </label> <input type="checkbox" value="Literature_Quiz"><br><br>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E002', 'Rhapsody')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -514,7 +514,7 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E003', 'DA-Rush')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -545,7 +545,7 @@
                         <label>Group - </label> <input type="checkbox" value="Group"><br><br>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E004', 'Naach')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -576,7 +576,7 @@
                         <label>Group - </label> <input type="checkbox" value="Author's_Session"><br><br>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E011', 'Footloose')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -603,7 +603,7 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E005', 'Rampage')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -650,7 +650,7 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E006', 'Hackathon')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -677,7 +677,7 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E008', 'INC')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -706,7 +706,7 @@
                         <label>CELLULOID - </label> <input type="checkbox" value="Spelling_Bee"><br><br>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E007', 'Surge')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
@@ -735,7 +735,7 @@
                         <label>Dance - </label> <input type="checkbox" value="Spelling_Bee"><br><br>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E009', 'Hip-Hop-Street')">Register</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
                 </div>
             </div>
 
