--- a/dashboard.html
+++ b/dashboard.html
@@ -70,7 +70,7 @@
         </div>
     </div>
     <br>
-    <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#edit">EDIT DETAILS</button>
+    <!-- <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#edit">EDIT DETAILS</button> -->
     <div id="edit" class="collapse">
         <div class="center-block" style="width: 300px;text-align: left;">
             <br>
@@ -96,13 +96,15 @@
             </form>
         </div>
     </div>
-    <h2 class="heading padding">REGISTERED EVENTS</h2><br>
+    <h2 class="heading padding" ng-if="checkEventsLength()">REGISTERED EVENTS</h2><br>
     <div class="row">
         <div class="col-md-3" ng-repeat='event in participantEvents'>
           <div class="event_card">
             <h3>{{event.name}}</h3>
             <br>
-            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#shailee">EXPLORE</button>
+            <!-- <button type="button" class="btn btn-success" data-toggle="modal" data-target="#shailee">EXPLORE</button> -->
+            <button type="button" class="btn btn-primary" ng-click="deRegisterEvent(event.id)">De-register
+                </button>
           </div>
         </div>
     </div>
