Added firebase to assets

--- a/login.html
+++ b/login.html
@@ -171,19 +171,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js" charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-cookies.min.js" charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angularFire/2.3.0/angularfire.min.js" charset="utf-8"></script>
-<script src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
-<script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyC6p0APHD1XjE7HbDhV3aWg0Eqo4RbLXjk",
-        authDomain: "synapse-2aadf.firebaseapp.com",
-        databaseURL: "https://synapse-2aadf.firebaseio.com",
-        storageBucket: "synapse-2aadf.appspot.com",
-        messagingSenderId: "87001485842"
-    };
-    firebase.initializeApp(config);
-</script>
-
+<script src="assets/firebase/firebase.js"></script>
 <script src="assets/Javascript/app.js" charset="utf-8"></script>
 <script src="assets/Javascript/email.js" charset="utf-8"></script>
 <script src="assets/Javascript/login.js" charset="utf-8"></script>
